# finvest-platform

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_user_oauth_fields.py  003_add_feature_store.py  004_news_dedup_unique_index.py  005_portfolio_snapshots.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: accounts.py  ai.py  auth.py  backtest.py  market.py  oauth.py  portfolio.py  router.py  trading.py  users.py
backend/app/core/: redis.py  security.py
backend/app/crud/: account.py  order.py  position.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  account.py  base.py  feature.py  market_data.py  order.py  position.py  user.py
backend/app/schemas/: portfolio.py  trading.py  user.py
backend/app/services/: scheduler.py
backend/app/services/feature_engine/: __init__.py  engine.py  fundamental.py  technical.py
backend/app/services/llm/: __init__.py  gateway.py  research.py  sentiment.py
backend/app/services/market_data/: __init__.py  a_share.py  base.py  bond.py  collector.py  fund.py  hk_stock.py  us_stock.py
backend/app/services/news/: __init__.py  base.py  collector.py  eastmoney.py  macro.py  sina_finance.py  xueqiu.py
backend/app/services/prediction/: __init__.py  backtest.py  dataset.py  ensemble.py  lstm_model.py  trainer.py  transformer_model.py
backend/app/services/trading/: __init__.py  ashare_gateway.py  asset_tracker.py  gateway.py  matching_engine.py  order_state.py  portfolio.py  risk_manager.py  sim_gateway.py  snapshot.py
backend/app/services/trading/rules/: __init__.py  a_share.py  base.py  convertible_bond.py  us_stock.py
backend/scripts/: backfill_fund_acc_nav.py  backfill_market_data.py
backend/tests/: conftest.py  test_ashare_gateway.py  test_auth.py  test_convertible_bond_rules.py  test_feature_engine.py  test_health.py  test_llm.py  test_market_api.py  test_market_data.py  test_market_rules.py  test_news.py  test_order_state.py  test_prediction.py  test_risk_manager.py  test_stream_bus.py
docs/: budget-plan.md  development-plan.md  environment.md  platform-plan.md  trading-tasks.md
frontend/: Dockerfile  nginx.conf  (+3 more)
(+40 files in other folders)
